--- a/app/views/product_items/index.html.erb
+++ b/app/views/product_items/index.html.erb
@@ -27,7 +27,7 @@
 												<span class="actual">Rs.<%= product_item.price %></span>
 											</div>
 										</div>
-										<a href="/product_items/<%=product_item.id%>/edit"><div class="cart-right"></div></a>
+										<a href="/product_items/<%=product_item.id%>/edit"><div class="cart-rt"></div></a>
 										<div class="clear"></div>
 									</div>				
 								</div>
