--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -87,6 +87,19 @@
 			<li><a class="color6" href="other.html">Approve</a></li>
 			<li><a class="color6" href="other.html">History</a></li>
 		<%end%>
+			<li><a class="color5" href="#">Retailer</a>
+			<div class="megapanel">
+				<div class="col1">
+						<div class="h_nav">
+							<h4>User Request</h4>
+							<ul>
+								<li><a href="mens.html">Daily-wear soft lenses</a></li>
+								<li><a href="mens.html">Extended-wear</a></li>
+							</ul>	
+						</div>							
+					</div>
+				</div>
+			</li>
 		</ul>
 		</div>
 	</div>
