--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,35 +1,40 @@
-<%- model_class = ProductItem -%>
-<div class="page-header">
-  <h1>Products</h1>
+<div class="register_account">
+	<div class="wrap">
+		<% if !@cart.product_item_ids.present? %>
+    	     <h4 class="title">Shopping cart is empty</h4>
+    	     <p class="cart">You have no items in your shopping cart.<br>Click<a href="/home/index"> here</a> to continue shopping</p>
+		<%else%>
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th>Products</th>
+						<th>Description</th>
+						<th>Quantity</th>
+						<th>Price</th>
+						<th>Action</th>
+					</tr>
+				</thead>
+				<tbody>
+					<% @cart.product_item_ids.each do |product_item| %>
+					<tr>
+					<% product_item = find_product_item(product_item)%>
+						<% if product_item.pictures.present?%>
+						<td>	<%= link_to "#{image_tag product_item.pictures.first.image.url(:thumb)}".html_safe, product_item_path(product_item)%> </td>
+						<% end %>
+						
+						<td> <%= product_item.description %></td>
+						<td> <%= product_item.available_quantity %></td>
+						<td><%= product_item.price %></td>
+						
+						</tr>
+							<%if product_item.user_id == current_user.id %>
+								<%= link_to t('.edit', :default => t("helpers.links.edit")),edit_product_item_path(product_item), :class => 'btn btn-mini' %>
+								<%= link_to t('.destroy', :default => t("helpers.links.destroy")),product_item_path(product_item),:method => :delete,:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },:class => 'btn btn-mini btn-danger' %>
+							<% end %>
+							<td><%= link_to t('.destroy', :default => "Remove"),remove_from_my_cart_carts_path(:product_id=>product_item.id),:method => :delete,:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },:class => 'btn btn-mini btn-danger' %></td>
+					<% end %>
+				</tbody>
+			</table>
+		<%end%>
+	</div>
 </div>
-<% if !@cart.product_item_ids.present? %>
-   <h4 class="title">Shopping cart is empty</h4>
-    	     <p class="cart">You have no items in your shopping cart.<br>
-			Click<a href="/home/index"> here</a> to continue shopping</p>
-<% else %>
-	<% @cart.product_item_ids.each do |product_item| %>
-	<div class="divOuter">
-		<div class="divInner1"> 
-			<% product_item = find_product_item(product_item)%>
-			<% if product_item.pictures.present?%>
-				<%= link_to "#{image_tag product_item.pictures.first.image.url(:medium)}".html_safe, product_item_path(product_item)%>
-			<% end %>
-		</div>
-		<div class="divInner2">
-			Item ID <%= link_to product_item.id, product_item_path(product_item) %><br>
-			Title <%= product_item.title %><br>
-			Available Quality <%= product_item.available_quantity %><br>
-			Description <%= product_item.description %><br>
-			Price <%= product_item.price %><br>
-			Active <%= product_item.is_active %><br>		
-			<%if product_item.user_id == current_user.id %>
-				<%= link_to t('.edit', :default => t("helpers.links.edit")),edit_product_item_path(product_item), :class => 'btn btn-mini' %>
-				<%= link_to t('.destroy', :default => t("helpers.links.destroy")),product_item_path(product_item),:method => :delete,:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },:class => 'btn btn-mini btn-danger' %>
-			<% end %>
-		</div>
-			<%= link_to t('.destroy', :default => "Remove"),remove_from_my_cart_carts_path(:product_id=>product_item.id),:method => :delete,:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },:class => 'btn btn-mini btn-danger' %>
-		</div>
-	<% end %>
-	<%=link_to(image_tag("https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif"), orders_billing_info_path)%>
-<% end %>
-   
