--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -53,12 +53,6 @@
 								<li><a href="/admins/assign">Assign</a></li>
 							</ul-->
 						</li> |
-					<% elsif User.find_role?(current_user) == "C"%>
-						<%if current_user.cart.product_item_ids && current_user.cart.product_item_ids%>
-							<li><%= link_to "My Cart (#{current_user.cart.product_item_ids.count})", carts_path %> </li> |
-						<%else%>
-							<li><%= link_to "My Cart", carts_path %> </li> |
-						<% end %>
 					<% elsif User.find_role?(current_user) == "B"%>	
 						<li><%= link_to "Manage Products", product_items_path %> </li> |
 						<li><%= link_to "Shop", "/home/index" %> </li> |
@@ -91,6 +85,11 @@
 				<li><a class="color6" href="other.html">History</a></li>
 			<% end %>
 		<%end%>
+		<% if current_user && User.find_role?(current_user) == "C"%>
+				<li><%= link_to "Products", product_items_path, :class => "color4" %> 
+				<li><a class="color6" href="other.html">History</a></li>
+		<%end%>
+		<% if current_user && User.find_role?(current_user) == "A"%>
 			<li><a class="color5" href="#">Retailer</a>
 			<div class="megapanel">
 				<div class="col1">
@@ -104,6 +103,7 @@
 					</div>
 				</div>
 			</li>
+		<%end%>
 		</ul>
 		</div>
 	</div>
@@ -140,9 +140,19 @@
 					<li><h3>No Products</h3><a href=""></a></li>
 					<li><p>Lorem ipsum dolor sit amet, consectetuer  <a href="">adipiscing elit, sed diam</a></p></li>
 				</ul>
+								<ul class="sub-icon1 list">
+					<li><h3>No Products</h3><a href=""></a></li>
+					<li><p>Lorem ipsum dolor sit amet, consectetuer  <a href="">adipiscing elit, sed diam</a></p></li>
+				</ul>
 			</li>
 		</ul>
-		<ul class="last"><li><a href="#">Cart(0)</a></li></ul>
+			<%if User.find_role?(current_user) == "C"%>
+				<%if current_user.cart.product_item_ids && current_user.cart.product_item_ids%>
+					<ul class="last"><li><%= link_to "My Cart (#{current_user.cart.product_item_ids.count})", carts_path %> </li></ul>
+				<%else%>
+					<ul class="last"><li><%= link_to "My Cart (0)", carts_path %> </li></ul>
+				<% end %>
+			<%end%>
 		<%end%>
 	</div>
 	</div>
