--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,9 @@
 <%- model_class = User -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
-</div>
+
 <% if !@users.present? %>
 	Sorry!! No Users Found
 <% else %>
+<div class="wrap">
 	<table class="table table-striped">
 		<thead>
 			<tr>
@@ -34,6 +33,7 @@
 		</tbody>
 	</table>
 <% end %>
+</div>
 
 <!--%= link_to t('.new', :default => t("helpers.links.new")),new_user_path,:class => 'btn btn-primary' %-->
 
