--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -31,7 +31,7 @@
 						  fjs.parentNode.insertBefore(js, fjs);
 						}(document, 'script', 'facebook-jssdk'));</script>
 						<div class="like_box">	
-							<div class="fb-like-box" data-href="http://www.facebook.com/w3layouts" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
+							<div class="fb-like-box" data-href="http://www.facebook.com/SmartekConsultancy" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
 						</div>
  				  </div>
 				  <div class="col_1_of_f_2 span_1_of_f_2">
@@ -74,13 +74,11 @@
 				 <div class="col_1_of_f_2 span_1_of_f_2">
 				   <h3>Contact us</h3>
 						<div class="company_address">
-					                <p>500 Lorem Ipsum Dolor Sit,</p>
-							   		<p>22-56-2-9 Sit Amet, Lorem,</p>
-							   		<p>USA</p>
-					   		<p>Phone:(00) 222 666 444</p>
-					   		<p>Fax: (000) 000 00 00 0</p>
-					 	 	<p>Email: <span>mail[at]leoshop.com</span></p>
-					   		
+							<p>Smartek Consultancy services</p>
+							<p>SP7A, Ground Floor, Gupta Building</p>
+							<p>SIDCO Industrial Estate, Ekkatuthangal</p>
+					   		<p>Guindy,Chennai - 600032</p>
+					 	 	<p>Email: <span>info@smartek21.com/span></p>			   		
 					   </div>
 					   <div class="social-media">
 						     <ul>
@@ -101,7 +99,7 @@
 		<div class="footer-bottom">
 			<div class="wrap">
 	             <div class="copy">
-			        <p>© 2014 Template by <a href="http://w3layouts.com" target="_blank">w3layouts</a></p>
+			        <p>© 2014 Ecommerce by <a href="http://w3layouts.com" target="_blank">Smartek</a></p>
 		         </div>
 				<div class="f-list2">
 				 <ul>
