--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -77,7 +77,7 @@
 			</div>
 			<div class="menu">
 						<ul class="megamenu skyblue">
-		<li class="active grid"><a href="/product_items">Home</a></li>
+		<li class="active grid"><a href="/home/index">Home</a></li>
 		<% if current_user && User.find_role?(current_user) == "B"%>
 			<%if params[:controller] == "product_items" && params[:action] == "index"%>
 				<li><%= link_to "Products", product_items_path, :class => "color4" %> 
@@ -134,21 +134,28 @@
 			</ul>
 		</li>
 	</ul>
-		<%if (current_user && User.find_role?(current_user) == "C" ) && current_user.cart.product_item_ids %>
+		<%if (current_user && User.find_role?(current_user) == "C" )%>
 			<ul class="icon1 sub-icon1 profile_img">
 				<li><a class="active-icon c2" href="#"> </a>
-										<ul class="sub-icon1 list">
-					<% current_user.cart.product_item_ids.each do |product_item| %>
-					<% product_item = find_product_item(product_item)%>
-
+					<ul class="sub-icon1 list">
+					<% if current_user.cart.product_item_ids.nil?%>
+					<li><a href="/carts"><h3>No products</h3></a></li>
+					<%else%>
+						<% current_user.cart.product_item_ids && current_user.cart.product_item_ids.each do |product_item| %>
+						<% product_item = find_product_item(product_item)%>
 							<li><a href="/carts"><h3><%=product_item.title%></h3></a></li>
 							<li><p><%=product_item.price%><a href="">adipiscing elit, sed diam</a></p></li>
-					
+						</ul>
+					</li>
+					</ul>
 				<%end%>
-				</ul>
-				</li>
-			</ul>
-			<ul class="last"><li><%= link_to "My Cart (#{current_user.cart.product_item_ids.count})", carts_path %> </li></ul>
+				<%end%>
+					<%if current_user.cart.product_item_ids.nil?%>
+						<ul class="last"><li><%= link_to "My Cart (0)", carts_path %> </li></ul>
+						<%else%>
+					<ul class="last"><li><%= link_to "My Cart (#{current_user.cart.product_item_ids.count})", carts_path %> </li></ul>
+					<%end%>
+
 			<%else%>
 				<ul class="icon1 sub-icon1 profile_img">
 					<li><a class="active-icon c2" href="#"> </a>
