--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 	<body>
 		<%= render "layouts/header" %>
 		<!--%= render "layouts/slider" %-->
-		<div>
+		<div style="padding-left:160px;color:red;">
 			<p class="notice_msg"><%= notice %></p>
 			<p class="alert_msg"><%= alert %></p>
 		</div>
