--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -155,3 +155,11 @@ ul.navigation li.highlight a{ color:#f5f5f5; cursor:default; background:#474747}
         margin-left:3px;
         margin-right:3px;
     }
+	
+.back{
+float: left;
+width: 161px;
+padding-left: 105px;
+margin-top: -39px;
+margin-left: 118px;
+	}
